--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
-    <string name="app_name">TourHear</string>
+    <string name="app_name">途聆自驾游助手</string>
+    <string name="agree_protocol">我已阅读并同意</string>
+    <string name="service_items">服务条款</string>
+    <string name="register">注册</string>
+    <string name="phone">账号/手机号</string>
+    <string name="password">密码</string>
+    <string name="input_password">输入密码</string>
+    <string name="confirm_password">确认密码</string>
+    <string name="check_code">验证码</string>
+    <string name="get_check_code">获取验证码</string>
+    <string name="next_step">下一步</string>
 </resources>
